--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@perimetre/ui",
   "description": "A component library made by @perimetre",
-  "version": "8.0.0",
+  "version": "8.0.1",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/perimetre/ui.git"
@@ -35,8 +35,8 @@
     "lint:css": "stylelint \"./src/**/*.+(js|jsx|ts|tsx|css|scss)\"",
     "type-check": "tsc --noEmit",
     "check-commit": "npm run type-check && npm run prettier && npm run lint:css && npm run lint:fix && npm run rollup:build",
-    "storybook": "start-storybook -s public -p 6006",
-    "build-storybook": "build-storybook -s public",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
     "serve-storybook": "npm run build-storybook && http-server ./storybook-static -c-1",
     "deploy-storybook": "storybook-to-ghpages",
     "rollup:build": "rollup -c",
@@ -44,20 +44,21 @@
     "prepare": "npm run rollup:build"
   },
   "peerDependencies": {
+    "isomorphic-dompurify": "0.x",
     "react": "17.x",
-    "react-dom": "17.x",
-    "isomorphic-dompurify": "0.x"
+    "react-dom": "17.x"
   },
   "dependencies": {
     "@babel/core": "^7.12.13",
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-brands-svg-icons": "^6.0.0",
-    "@fortawesome/free-regular-svg-icons": "^6.0.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@rollup/plugin-commonjs": "^23.0.0",
+    "@rollup/plugin-json": "^5.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@storybook/builder-vite": "^0.2.4",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
     "@tippyjs/react": "^4.2.0",
@@ -74,7 +75,7 @@
     "@types/styled-components": "^5.1.7",
     "@types/svgo": "^2.6.0",
     "@types/yup": "^0.29.11",
-    "@whitespace/storybook-addon-html": "^4.2.0",
+    "@whitespace/storybook-addon-html": "^5.0.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
@@ -96,11 +97,11 @@
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.4.2",
     "preval.macro": "^5.0.0",
-    "rollup": "^2.41.1",
+    "rollup": "^3.2.3",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-typescript2": "^0.34.1",
     "styled-components": "^5.2.1",
     "svgo": "^2.8.0",
     "tailwindcss": "^3.0.23",
@@ -111,15 +112,17 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@storybook/addon-a11y": "^6.5.8",
-    "@storybook/addon-actions": "^6.5.8",
-    "@storybook/addon-essentials": "^6.5.8",
-    "@storybook/addon-links": "^6.5.8",
+    "@storybook/addon-a11y": "^6.5.12",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^6.5.8",
-    "@storybook/react": "^6.5.8",
-    "@storybook/storybook-deployer": "^2.8.11",
-    "@storybook/theming": "^6.5.8",
+    "@storybook/addons": "^6.5.12",
+    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/react": "^6.5.12",
+    "@storybook/storybook-deployer": "^2.8.12",
+    "@storybook/theming": "^6.5.12",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.18.0",
@@ -130,6 +133,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-storybook": "^0.6.6",
+    "html-webpack-plugin": "^5.5.0",
     "http-server": "^0.12.3",
     "husky": "^4.3.8",
     "isomorphic-dompurify": "^0.13.0",
@@ -137,10 +142,14 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "storybook": "^6.5.8",
+    "storybook": "^6.5.12",
     "storybook-addon-jsx": "^7.3.14",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-styled-components": "^0.1.1"
+    "stylelint-config-styled-components": "^0.1.1",
+    "webpack": "^5.74.0"
+  },
+  "resolutions": {
+    "@storybook/react/webpack": "^5"
   }
 }
