--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "@types/react-dom": "18.x",
     "isomorphic-dompurify": "0.x",
     "react": "18.x",
-    "react-dom": "18.x"
+    "react-dom": "18.x",
+    "formik": "^2.2.9"
   },
   "dependencies": {
     "@babel/core": "^7.12.13",
@@ -86,7 +87,6 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "draftjs-utils": "^0.10.2",
-    "formik": "^2.2.9",
     "framer-motion": "^3.3.0",
     "hammerjs": "^2.0.8",
     "html-react-parser": "^1.2.4",
